<resources>
    <string name="app_name">Memo Loco</string>
    <string name="channel_name">Memo Loco Notifications</string>
    <string name="channel_description">Notifications from Memo Loco app</string>

    <string name="geofence_ok">Your home has been registered!\nYou will now be notified when you leave or get home\n🤠</string>
    <string name="error_geofence_not_available">
        To enable geofence, depending on Android version, you need to:\n
        - Settings▸Security&amp;Location▸Location▸Mode and choose High accuracy\n
        - Settings▸Security&amp;Location▸Location▸Google Location Accuracy and choose Improve Location Accuracy
    </string>
    <string name="error_too_many_geofences">⚠️ There have been set too many geofences on this phone ⚠️</string>
    <string name="error_geofences_generic_with_code">⚠️ An error occurred while adding geofence: %s ⚠️</string>
    <string name="error_permissions_not_granted">
        You need to give location permissions to the app, in order to use it 🚷\n
        This app collects location data to enable location-based notifications even when the app is closed or not in use
    </string>
    <string name="error_background_permissions_not_granted">
        Background location permissions are needed to let the app know where you are and notify you.\n\n
        In order to allow this app to use location in background, you need to give the following permissions:\n
        - Foreground Location ✅\n
        - Background Location ❌\n
        \nTap on the button and choose \"Allow all the time\" from the list to give background location permissions.
    </string>
    <string name="error_two_steps__permission_request_needed">
        Background location permissions are needed to let the app know where you are and notify you.\n\n
        In order to allow this app to use location in background, you need to give the following permissions:\n
        - Foreground Location ❌\n
        - Background Location ❌\n
        \nTap on the button to give foreground location permissions.
    </string>
    <string name="error_add_geofences_generic">⚠️ An error occurred while adding geofence ⚠️</string>
    <string name="error_remove_geofences_generic">⚠️ An error occurred while removing geofence ⚠️</string>
    <string name="error_missing_home">You need to save the location of your home 🏠</string>
    <string name="error_location_invalid">
        It seems that your location is not accurate enough:\n️\n
        🗺 Open Google Maps\n
        📍 Wait until your position is displayed with a narrow circle\n
        🤞 Come back here and try again
    </string>
    <string name="dialog_location_permissions_title">Background Location</string>
    <string name="dialog_location_permissions_message">
        This app collects location data to enable location-based notifications even when the app is closed or not in use.\n
        Do you want to proceed with permissions request?</string>
    <string name="dialog_location_permissions_button_positive">Yes</string>
    <string name="dialog_location_permissions_button_negative">Cancel</string>
    <string name="error_missing_app_to_open">Choose the app to open when the notification is tapped 📲🔔</string>
    <string name="error_gps_turned_off">⚠️ You need to turn on the GPS in order to save your home location 🛰️️</string>
    <string name="error_location_generic">⚠️ An error occurred while retrieving location ⚠️</string>

    <string name="bluetooth_disabled_popup">The Bluetooth is now disabled. Thanks for saving your battery and our world 🌍</string>
    <string name="home_updated_popup">Your home location has been updated using your current location 🏠</string>
    <string name="btn_ok">OK</string>

    <string name="notification_title_at_home">Home sweet home! 🏠🛏</string>
    <string name="notification_body_at_home"><strong>Tap me</strong> to turn off the bluetooth to deactivate %s</string>
    <string name="notification_title_outside_home">You\'re leaving home, get ready for the adventure! 🗡🛡</string>
    <string name="notification_body_outside_home"><strong>Tap me</strong> to open %s</string>
    <string name="btn_requestLocation_label">Use Current Location</string>
    <string name="btn_requestPermissions_label">Give Permissions</string>
    <string name="btn_checkHome_label">Check your home</string>
    <string name="btn_updateWithCurrentLocation_label">Update home location</string>
    <string name="btn_removeReminder_label">Remove Reminder</string>
    <string name="btn_choose_app_label">Choose app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://sites.google.com/view/memoloco/home-page</string>
</resources>