<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.gianlucaparadise.memorandaloco.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btn_requestPermissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.9"
            tools:text="@string/geofence_ok" />

        <Button
            android:id="@+id/btn_requestPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewmodel.requestPermissionsAndAddGeofence()}"
            android:text="@string/btn_requestPermissions_label"
            app:layout_constraintBottom_toTopOf="@+id/btn_requestLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_message"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_requestLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewmodel.requestLocationAndAddGeofence()}"
            android:text="@string/btn_requestLocation_label"
            app:layout_constraintBottom_toTopOf="@+id/btn_checkHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_requestPermissions"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_checkHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewmodel.checkHome()}"
            android:text="@string/btn_checkHome_label"
            app:layout_constraintBottom_toTopOf="@+id/btn_updateWithCurrentLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_requestLocation"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_updateWithCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewmodel.updateHomeAndAddGeofence()}"
            android:text="@string/btn_updateWithCurrentLocation_label"
            app:layout_constraintBottom_toTopOf="@+id/btn_removeReminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_checkHome"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_removeReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{() -> viewmodel.removeGeofence()}"
            android:text="@string/btn_removeReminder_label"
            app:layout_constraintBottom_toTopOf="@+id/btn_choose_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_updateWithCurrentLocation"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_choose_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_choose_app,application_list"
            tools:visibility="visible" />

        <com.gianlucaparadise.memorandaloco.ui.views.applicationpicker.ApplicationPickerView
            android:id="@+id/application_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_choose_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_removeReminder"
            app:selectedApp="@={viewmodel.selectedApp}" />

        <Button
            android:id="@+id/btn_choose_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewmodel.canChooseApp}"
            android:onClick="@{() -> viewmodel.chooseAppAndAddGeofence()}"
            android:text="@string/btn_choose_app_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/application_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>